force-app/main/default/objects/Top_X_Designation__c/Top_X_Designation__c.object-meta.xml
<CustomObject>
    <label>Top X Designation</label>
    <nameField>
        <label>Top X Designation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Top X Designation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>