force-app/main/default/objects/Top_X_Designation__c/fields/Document_Attacthed__c.field-meta.xml
<CustomField>
    <fullName>Document_Attacthed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Document Attacthed</label>
    <type>Checkbox</type>
</CustomField>