force-app/main/default/objects/Top_X_Designation__c/fields/Item_type__c.field-meta.xml
<CustomField>
    <fullName>Item_type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contract Flow Down/ Handoff</fullName>
            </value>
            <value>
                <fullName>Contract Flow High/Handoff</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>