force-app/main/default/objects/Top_X_Designation__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Opportunity new look up</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Top X Designation</relationshipLabel>
    <relationshipName>Top_X_Designation</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>